# ducklib

./: .gitignore  CMakeLists.txt  Directory.Build.props  ducklib.slnx  install.bat
.renderdoc/: hello-gui-debug.cap
core/: CMakeLists.txt  Core.vcxproj
core/include/ducklib/core/: app_window.h  math.h
core/include/ducklib/core/win/: win_app_window.h
core/src/: logger.cpp  math.cpp  unicode.cpp
core/src/win/: win_app_window.cpp
include/core/: app_window.h  unicode.h
include/core/logging/: log_level.h  logger.h
include/core/win/: win_app_window.h
include/input/: input.h
include/math/: math.h
include/net/: connection.h  serialization.h  shared.h
include/render/: font.h  render_util.h  resource_manager.h
include/render/core/: adapter.h  descriptor_set.h  device.h  format.h  rhi.h
include/render/core/d3d12/: d3d12_adapter.h  d3d12_device.h  d3d12_format.h  d3d12_rhi.h  d3d12_utility.h
include/render/core/d3d12/resources/: d3d12_descriptor_set.h  d3d12_swap_chain.h
include/render/gui/: font.h  gui.h
include/render/rhi/: command_list.h  command_queue.h  constants.h  device.h  rhi.h  types.h
include/render/rhi/resources/: descriptor_set.h  swap_chain.h  vertex_buffer.h
input/: CMakeLists.txt  input.props  input.vcxproj
input/include/ducklib/input/: input.h
input/src/: input.cpp
net/: CMakeLists.txt  net.props  net.vcxproj
net/include/ducklib/net/: connection.h  net.h  shared.h  socket.h
net/src/: connection.cpp  net.cpp  serialization.cpp  shared.cpp  socket.cpp
net/test/net_shared_unit_tests/: CMakeLists.txt  address_tests.cpp  net_shared_unit_tests.vcxproj  serialization_tests.cpp
net/test/reliability_test/: draft_test.cpp
net/tools/connection_peer/: CMakeLists.txt  connection_peer.cpp  connection_peer.vcxproj  connection_peer.vcxproj.filters
render/: CMakeLists.txt  Render.vcxproj  Render.vcxproj.filters  render.props
render/include/ducklib/render/: render_util.h
render/include/ducklib/render/gui/: font.h  gui.h
render/include/ducklib/render/rhi/: device.h  shader.h  types.h
render/src/: font.cpp  render_util.cpp  resource_manager.cpp
render/src/core/D3D12/: d3d12_device.cpp  d3d12_rhi.cpp
render/src/gui/: font.cpp  gui.cpp
render/src/rhi/: command_list.cpp  command_queue.cpp  device.cpp  rhi.cpp  shader.cpp  types.cpp
render/src/rhi/resources/: PrimitiveTopology.h
render/test/render_hello_gui/: CMakeLists.txt  gui_shaders.hlsl  render_hello_gui.cpp  render_hello_gui.vcxproj  render_hello_gui.vcxproj.filters  text_shaders.hlsl
render/test/render_hello_triangle/: CMakeLists.txt  render_hello_triangle.cpp  render_hello_triangle.vcxproj  render_hello_triangle.vcxproj.filters  shaders.hlsl
render/test/render_hello_world/: CMakeLists.txt  render_hello_world.cpp  shaders.hlsl
